# rust_newsletter

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  test_api.http
migrations/: 20240323131210_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
